--- a/settings.gradle
+++ b/settings.gradle
@@ -47,3 +47,18 @@ gradle.ext.akka = [version : '2.5.22']
 gradle.ext.akka_http = [version : '10.1.8']
 
 gradle.ext.curator = [version:'4.0.0']
+
+
+boolean remoteCache = System.env['OKRO_CI'] != null
+
+buildCache {
+    local {
+        enabled = !remoteCache
+    }
+    remote(HttpBuildCache) {
+        // url will be changed to external dns name
+        url = 'http://gradle-build-cache.alice-ci:5071/cache/'
+        enabled = remoteCache
+        push = remoteCache
+    }
+}
